# CADD-SV

./: .gitattributes  .gitignore  LICENSE  README.md  Snakefile  cluster.json  config.yml  environment.yaml  example_config  pyproject.toml
.github/workflows/: containers.yml  publish-pypi.yml
beds/: example.bed
caddsv/: cli.py  config.yml  container_images.py
caddsv/containers/: Dockerfile  README.md
caddsv/workflow/: Snakefile  create_envs.smk
caddsv/workflow/envs/: NT.yml  SV.yml  prepBED.yml  preprocessing.yml
caddsv/workflow/models/: DEL_PHRED.tsv  DUP_PHRED.tsv  INS_PHRED.tsv  INV_PHRED.tsv
caddsv/workflow/rules/: annotations.smk  fileprep.smk  preprocessing.smk  seqonly.smk
caddsv/workflow/scripts/: CB_final.py  PLIextract.py  SB_features_df_generator.py  add_phred.py  annotateHIC.py  count_map.py  input_bed_preprocessing.sh  log_transform.py  preprocess_sequences.py  retrieve_seq.py  retrieve_seq_for_nt.py  rule_boundary_score.py  rule_cadd_PC_phylop.py  rule_chromHMM.py  rule_screen.py  run_segmentNT.py  run_segmentNT_test.py  scale_features.py  scoring.py  (+9 more)
dependencies/: 2021cdelmodel.rds  2021cinsmodel.rds  2021gnomadrank.RDS  2021hdelmodel.rds  2021hinsmodel.rds  2021scale.rds  README
envs/: SV.yml  prepBED.yml
examples/: sequences.tsv  variants.bed
input/: id_test.bed
models/: 2021gnomadrank20k.RDS  2021gnomadrank20k_2.RDS  2021scale.RDS  cdelmodelRF.RDS  cinsmodelRF.RDS  conversion_table_PHRED_DEL.txt  conversion_table_PHRED_DUP.txt  conversion_table_PHRED_INS.txt  hdelmodelRF.RDS  hinsmodelRF.RDS
output/: test_score.bed
scripts/: PLIextract.R  scoring.R
tests/: test_cli.py
workflow/: Snakefile
workflow/envs/: NT.yml  SV.yml  preprocessing.yml  training.yml
workflow/rules/: annotations.smk  fileprep.smk  preprocessing.smk
workflow/scripts/: CB_final.py  DB_features_df_generator.py  PLIextract.R  SB_features_df_generator.py  Untitled.ipynb  annotateHIC.R  input_bed_preprocessing.sh  input_vcf_preprocessing.sh  max_map.py  mean_map.py  mean_map2.py  retrieve_seq_for_nt.py  retrieve_seq_for_ref.py  rule_cadd_PC_phylop.py  rule_cadd_features.py  rule_encode.py  run_segmentNT.py  scoring.R  scoring.py  training.py  validation_performance.py
