[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caddsv"
version = "2.0"
description = "CADD-SV Structural Variant scoring Workflow"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "snakemake>=7.31.0",
  "pulp==2.7"
]

[project.scripts]
caddsv = "caddsv.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["caddsv*"]  

[tool.setuptools.package-data]
caddsv = [
  "workflow/Snakefile",
  "workflow/rules/*.smk",
  "workflow/envs/*.yml",
  "workflow/models/*.joblib",
  "workflow/models/*_PHRED.tsv",
  "workflow/scripts/*.py",
  "workflow/scripts/*.sh",
  "config.yml",
]
